--- a/task_9.html
+++ b/task_9.html
@@ -20,64 +20,32 @@
             <input type="text" class="form-control" autofocus placeholder="0" id="calculator" value="">
         </div>
     </div>
-    <table class="calculator-buttons">
-        <tr>
-            <td>
-                <input type="button" id="seven" class="form-control button" value="7">
-            </td>
-            <td>
-                <input type="button" id="eight" class="form-control button" value="8">
-            </td>
-            <td>
-                <input type="button" id="nine" class="form-control button" value="9">
-            </td>
-            <td>
-                <input type="button" id="divide" class="form-control button operations" value="/">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="button" id="four" class="form-control button" value="4">
-            </td>
-            <td>
-                <input type="button" id="five" class="form-control button" value="5">
-            </td>
-            <td>
-                <input type="button" id="six" class="form-control button" value="6">
-            </td>
-            <td>
-                <input type="button" id="multiply" class="form-control button operations" value="*">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="button" id="one" class="form-control button" value="1">
-            </td>
-            <td>
-                <input type="button" id="two" class="form-control button" value="2">
-            </td>
-            <td>
-                <input type="button" id="three" class="form-control button" value="3">
-            </td>
-            <td>
-                <input type="button" id="minus" class="form-control button operations" value="-">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="button" id="zero" class="form-control button" value="0">
-            </td>
-            <td>
-                <input type="button" id="point" class="form-control button" value=".">
-            </td>
-            <td>
-                <input type="button" id="plus" class="form-control button operations" value="+">
-            </td>
-            <td>
-                <input type="button" id="equals" class="form-control button operations" value="=">
-            </td>
-        </tr>
-    </table>
+    <div class="calculator-buttons">
+        <div class="calculator-row">
+            <input type="button" id="seven" class="form-control button" value="7">
+            <input type="button" id="eight" class="form-control button" value="8">
+            <input type="button" id="nine" class="form-control button" value="9">
+            <input type="button" id="divide" class="form-control button operations" value="/">
+        </div>
+        <div class="calculator-row">
+            <input type="button" id="four" class="form-control button" value="4">
+            <input type="button" id="five" class="form-control button" value="5">
+            <input type="button" id="six" class="form-control button" value="6">
+            <input type="button" id="multiply" class="form-control button operations" value="*">
+        </div>
+        <div class="calculator-row">
+            <input type="button" id="one" class="form-control button" value="1">
+            <input type="button" id="two" class="form-control button" value="2">
+            <input type="button" id="three" class="form-control button" value="3">
+            <input type="button" id="minus" class="form-control button operations" value="-">
+        </div>
+        <div class="calculator-row">
+            <input type="button" id="zero" class="form-control button" value="0">
+            <input type="button" id="point" class="form-control button" value=".">
+            <input type="button" id="plus" class="form-control button operations" value="+">
+            <input type="button" id="equals" class="form-control button operations" value="=">
+        </div>
+    </div>
 </form>
 </div>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
